--- a/imports/ui/containers/home/styles.scss
+++ b/imports/ui/containers/home/styles.scss
@@ -13,5 +13,35 @@
         .row {
             width: 100%;
         }
+
+        &__or {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 30px 0;
+            font-size: 16px;
+            font-style: italic;
+        }
+
+        &__input {
+            display: flex;
+            width: 70%;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+
+            input {
+                margin: 0 10px;
+
+                &:focus {
+                    border-bottom: 1px solid #2196F3 !important;
+                    box-shadow: 0 1px 0 0 #2196F3 !important;
+                }
+            }
+
+            a {
+                flex-shrink: 0;
+            }
+        }
     }
 }
